# rag-refinement-system

./: .env.example  .gitignore  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  SRS.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/app/: __init__.py  errors.py  health.py  main.py  settings.py
backend/app/adapters/: __init__.py  document_store.py  generation.py  ingestor.py  router.py  stores.py
backend/app/api/: __init__.py  answer.py  dependencies.py  documents.py  helpers.py  interfaces.py  observability.py  routing.py  schemas.py
db/: __init__.py  models.py  qdrant_bootstrap.py
db/tests/: __init__.py  conftest.py  test_qdrant_bootstrap.py  test_schema.py
deploy/: README.md  docker-compose.prod.yml  frontend.Dockerfile
deploy/k8s/: api-deployment.yaml  ingress.yaml  secret.example.yaml
deploy/reverse-proxy/: Caddyfile.example
docs/: code-review-fix-requirements.md  execution_state.json  orchestration_prompt.md  rag-sprint-workflow.js
docs/execution/: RUNBOOK.md  _common_context.md  build_ledger.py  ledger.json
docs/phase-0-requirements/: phase1_architect_brief.md
docs/phase-1-api-contracts/: api_contract_verdict.json  error_catalog.json  fr_api_traceability.json  openapi.yaml
docs/phase-1-architecture/: context_delivery_plan.md  hld.md
docs/phase-2-validation/: advisory_items.json  joint_verdict.json
docs/phase-3-design/: accessibility_report.json  component_library.md  design_verdict.json  screen_inventory.md  tokens_css.css
docs/phase-4-reconciliation/: design_spec_v2_notes.md  grand_advisory_items.json  grand_blueprint_verdict.json  hld_v3.md  reconciliation_matrix.md
docs/phase-5-documentation/: doc_verdict.json  drawio_urls.json
docs/phase-6-sprint-planning/: backlog.md  fr_story_traceability.json  github_issues_manifest.json  sprint_1_backlog.md  sprint_agent_briefs.json  sprint_verdict.json
docs/phase-7-routing/: ar1_assignments.json  ar2_dag_proof.json  ar3_context_windows.json  implementation_execution_plan.json  routing_verdict.json
docs/phase-8-alignment/: ar3_context_windows_v2.json  implementation_execution_plan_v2.json  ir2_resolution_log.json  ir5_alignment_verdict.json
docs/phase-C-hallucination/: detection_report.md  faithfulness_scorecard.json
docs/phase-D-qa/: qa_verdict.json  test_plan.md
docs/phase-E-reliability/: reliability_report.md  reliability_verdict.json
docs/phase-F-security/: findings.json  security_audit_report.md  security_verdict.json  threat_model.md
docs/phase-G-deploy/: deploy_runbook.md  deploy_verdict.json  observability.md
docs/phase_outputs/: TODO-01_B_python_backend_engineer.md  TODO-02_C_hallucination_detector.md  TODO-03_C_context_faithfulness_engineer.md  TODO-04_D1_test_management_agent.md  TODO-05_D2_unit_testing_specialist.md  TODO-06_D2_integration_testing_engineer.md  TODO-07_D3_security_testing_engineer.md  TODO-08_F1_threat_modeling_specialist.md  TODO-09_F2_sast_engineer.md  TODO-10_F2_secrets_detection_specialist.md  TODO-11_F2_dependency_vulnerability_analyst.md  TODO-12_F3_auth_security_specialist.md  TODO-13_F3_api_security_auditor.md  TODO-14_F6_security_lead_auditor.md  TODO-15_E_reliability_auditor.md
drawio/: activity_diagram.drawio  call_graph_diagram.drawio  class_diagram.drawio  communication_diagram.drawio  component_diagram.drawio  composite_diagram.drawio  deployment_diagram.drawio  interaction_diagram.drawio  object_diagram.drawio  package_diagram.drawio  sequence_diagram.drawio  state_diagram.drawio  usecase_diagram.drawio
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
ingestion/: __init__.py  chunker.py  embedder.py  ids.py  parser.py  pipeline.py  toc_extractor.py
ingestion/tests/: __init__.py  conftest.py  test_chunker.py  test_embedder.py  test_embedder_adapters.py  test_ingestion_internals.py  test_parser_live.py  test_pipeline.py  test_production_stores.py  test_toc_extractor.py
migrations/: 001_documents_sections.down.sql  001_documents_sections.sql  002_indexes_constraints.down.sql  002_indexes_constraints.sql  003_erasure_outbox_fk.down.sql  003_erasure_outbox_fk.sql  004_fix_tenant_hash_partial_index.down.sql  004_fix_tenant_hash_partial_index.sql  README.md
router/: __init__.py  graph.py  llm.py  prompts.py  schema.py
router/tests/: __init__.py  conftest.py  test_router.py  test_router_internals.py  test_router_llm_adapter.py
tests/: __init__.py  conftest.py  test_adapters.py  test_answer_endpoint.py  test_api_units.py  test_auth.py  test_backend_internals.py  test_dependency_providers.py  test_document_store_adapter.py  test_documents_endpoint.py  test_generation_adapter.py  test_health.py  test_health_internals.py  test_metrics.py  test_remaining_gaps.py  test_review_fixes.py  test_roi_calculator.py  test_route_endpoint.py  test_tracing.py
uml/: activity_diagram.md  call_graph_diagram.md  class_diagram.md  communication_diagram.md  component_diagram.md  composite_diagram.md  deployment_diagram.md  interaction_diagram.md  object_diagram.md  package_diagram.md  sequence_diagram.md  state_diagram.md  usecase_diagram.md
(+77 files in other folders)
