[project]
name = "rag-refinement-system"
version = "0.1.0"
description = "TOC-routed retrieval layer: scope-before-search RAG refinement backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "RAG Refinement System Team" }]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "anyio>=4.3,<5.0",
    "bandit>=1.7,<2.0",
    "detect-secrets>=1.5,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.app", "ingestion"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "ingestion", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "ingestion"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
