[project]
name = "rag-refinement-system"
version = "0.1.0"
description = "TOC-routed retrieval layer: scope-before-search RAG refinement backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RAG Refinement System Team" }]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.27,<1.0",
    # Directly imported in backend.app.security.auth; pinned to >=2.13.0 to
    # remediate the PyJWK algorithm-confusion / JWKS-SSRF / detached-JWS DoS
    # advisories (PYSEC-2026-120/175/176/177/178/179).
    "PyJWT>=2.13.0,<3.0",
    # Required by FastAPI for the multipart upload endpoint (ingestDocument);
    # >=0.0.27 fixes the multipart-parsing DoS (CVE-2026-40347, CVE-2026-42561).
    "python-multipart>=0.0.27",
    # Transitive via FastAPI; floor at >=1.0.1 for the Host-header URL
    # reconstruction fix (PYSEC-2026-161).
    "starlette>=1.0.1",
    # Transitive via pydantic-settings; floor at >=1.2.2 for the set_key/
    # unset_key symlink file-overwrite fix (CVE-2026-28684).
    "python-dotenv>=1.2.2",
    # Async task/IO library used by the ingestion adapter to run the
    # synchronous pipeline off the event loop (anyio.to_thread.run_sync).
    "anyio>=4.3,<5.0",
    # SQLAlchemy async engine for the document and section stores.
    "sqlalchemy[asyncio]>=2.0,<3.0",
    # asyncpg: async PostgreSQL driver required by SQLAlchemy async engine.
    "asyncpg>=0.29,<1.0",
    # Qdrant vector store: embedding search used by the ingestion and retrieval layers.
    "qdrant-client>=1.9,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=5.0,<8.0",
    "bandit>=1.7,<2.0",
    "detect-secrets>=1.5,<2.0",
    "pip-audit>=2.7,<3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "backend",
    "backend.app",
    "backend.app.api",
    "backend.app.adapters",
    "backend.app.security",
    "backend.app.productization",
    "ingestion",
    "router",
    "db",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "ingestion", "router", "db", "tests"]
extend-exclude = ["docs", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]
"**/conftest.py" = ["S101"]
"backend/app/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "ingestion"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "db/tests", "ingestion/tests", "router/tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["backend", "ingestion", "router", "db"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
